dataset1235/2025-2/610742602/users/59982477/executions/677928262_704983377.log
== RUN (2025-08-27 14:24:28)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo): "))
y = int(input("Digite o valor de Y (divisor): "))

#Processamento e Saída
print("Quociente da divisão inteira:",x//y)
print("Resto da divisão inteira:",x%y)
print("Quociente da divisão real:",x//y)
print("Produto de X vezes Y":",x*y)
print ("Y elevado à terceira potencia:", y**3)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:28:28)
-- CODE: 
#Entrada de Dados
x=int(input("Digite o valor de X (dividendo):"))
y=int(input("Digite o valor de Y (divisor):"))
#Processamento e Saída
print("Quociente da divisão inteira,x//y")
print("Resto da divisão inteira, x%y")
print("Quociente da divisão real, x//y")
print("Produto de X vezes Y, x*y")
print ("Y elevado à terceira potencia, y **3")


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia, y **3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:24:02)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):20 "))
y = int(input("Digite o valor de Y (divisor):6 "))

#Processamento e Saída
print("Quociente da divisão inteira:",x//y)
print("Resto da divisão inteira:",x%y)
print("Quociente da divisão real:",x//y)
print("Produto de X vezes Y":",x*y)
print ("Y elevado à terceira potencia:", y**3)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:28:39)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):20 "))
y = int(input("Digite o valor de Y (divisor):6 "))

#Processamento e Saída
print("Quociente da divisão inteira:", x//y)
print("Resto da divisão inteira:", x%y)
print("Quociente da divisão real:",x/y)
print("Produto de X vezes Y:", x * y)
print ("Y elevado à terceira potencia:", y**3)


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:26:51)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo): "))
y = int(input("Digite o valor de Y (divisor): "))

#Processamento e Saída
print("Quociente da divisão inteira:", x//y)
print("Resto da divisão inteira:", x%y)
print("Quociente da divisão real:",x/y)
print("Produto de X vezes Y":", x*y)
print ("Y elevado à terceira potencia:", y**3)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:35:31)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):"))
y = int(input("Digite o valor de Y (divisor):"))

#Processamento e Saída
print(20//6)
print(20%6)
print(20/6)
print(20 * 6)
print (20**3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8000
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
8000
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
8000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8000
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8000
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:41:48)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):"))
y = int(input("Digite o valor de Y (divisor):"))

#Processamento e Saída
print("Quociente da divisão inteira:", x // y)
print("Resto da divisão inteira:", x % y)
print("Quociente da divisão real:", x/y)
print("Produto de X vezes Y:", x*y)
print("Y elevado à terceira potência:", y**3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potência: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:37:19)
-- CODE: 
#Entrada de Dados
x=int(input("Digite o valor de X (dividendo):"))
y=int(input("Digite o valor de Y (divisor):"))
#Processamento e Saída
print("Quociente da divisão inteira,x//y")
print("Resto da divisão inteira, x%y")
print("Quociente da divisão real, x//y")
print("Produto de X vezes Y, x*y")
print ("Y elevado à terceira potencia, y **3")


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia, y **3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:44:59)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):20"))
y = int(input("Digite o valor de Y (divisor):6"))

#Processamento e Saída
print("Quociente da divisão inteira:", x // y) #divisão inteira
print("Resto da divisão inteira:", x % y) #resto
print("Quociente da divisão real:", x / y) #divisão real 
print("Produto de X vezes Y:", x * y) #multiplicação
print("Y elevado à terceira potência:", y**3) #potência
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potência: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:21:18)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):20 "))
y = int(input("Digite o valor de Y (divisor):6 "))
#Processamento e Saída
print("Quociente da divisão inteira", x//y)
print("Resto da divisão inteira", x % y)
print("Quociente da divisão real", x//y)
print("Produto de X vezes Y", x * y)
print ("Y elevado à terceira potencia", y ** 3)


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:21:30)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):20 "))
y = int(input("Digite o valor de Y (divisor):6 "))
#Processamento e Saída
print("Quociente da divisão inteira",x//y)
print("Resto da divisão inteira",x%y)
print("Quociente da divisão real", x//y)
print("Produto de X vezes Y", x * y)
print ("Y elevado à terceira potencia", y ** 3)


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:24:23)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo): "))
y = int(input("Digite o valor de Y (divisor): "))

#Processamento e Saída
print("Quociente da divisão inteira:",x//y)
print("Resto da divisão inteira:",x%y)
print("Quociente da divisão real:",x//y)
print("Produto de X vezes Y":",x*y)
print ("Y elevado à terceira potencia:", y**3)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":",x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:28:19)
-- CODE: 
#Entrada de Dados
x=int(input("Digite o valor de X (dividendo):10"))
y=int(input("Digite o valor de Y (divisor):3"))
#Processamento e Saída
print("Quociente da divisão inteira,x//y")
print("Resto da divisão inteira, x%y")
print("Quociente da divisão real, x//y")
print("Produto de X vezes Y, x*y")
print ("Y elevado à terceira potencia, y **3")


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia, y **3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:35:36)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):"))
y = int(input("Digite o valor de Y (divisor):"))

#Processamento e Saída
print(20//6)
print(20%6)
print(20/6)
print(20 * 6)
print (20**3)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8000
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
8000
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
8000
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8000
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8000
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:40:24)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):"))
y = int(input("Digite o valor de Y (divisor):"))

#Processamento e Saída
print("Quociente da divisão inteira:", x//y)
print("Resto da divisão inteira:", x % y)
print("Quociente da divisão real:", x/y)
print("Produto de X vezes Y:", x*y)
print("Y elevado à terceira potência:", y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potência: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:44:42)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):"))
y = int(input("Digite o valor de Y (divisor):"))

#Processamento e Saída
print("Quociente da divisão inteira:", x // y) #divisão inteira
print("Resto da divisão inteira:", x % y) #resto
print("Quociente da divisão real:", x / y) #divisão real 
print("Produto de X vezes Y:", x * y) #multiplicação
print("Y elevado à terceira potência:", y**3) #potência
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potência: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:22:45)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):20 "))
y = int(input("Digite o valor de Y (divisor):6 "))

#Processamento e Saída
# print("Quociente da divisão inteira",x//y)
# print("Resto da divisão inteira",x%y)
# print("Quociente da divisão real",x//y)
# print("Produto de X vezes Y", x*y)
# print ("Y elevado à terceira potencia", y**3)


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Digite o valor de X (dividendo):20 Digite o valor de Y (divisor):6
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Digite o valor de X (dividendo):20 Digite o valor de Y (divisor):6
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Digite o valor de X (dividendo):20 Digite o valor de Y (divisor):6
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Digite o valor de X (dividendo):20 Digite o valor de Y (divisor):6
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Digite o valor de X (dividendo):20 Digite o valor de Y (divisor):6
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Digite o valor de X (dividendo):20 Digite o valor de Y (divisor):6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:28:33)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):20 "))
y = int(input("Digite o valor de Y (divisor):6 "))

#Processamento e Saída
print("Quociente da divisão inteira:", x//y)
print("Resto da divisão inteira:", x%y)
print("Quociente da divisão real:",x/y)
print("Produto de X vezes Y:", x * y)
print ("Y elevado à terceira potencia:", y**3)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia: 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:27:02)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):20 "))
y = int(input("Digite o valor de Y (divisor):6 "))

#Processamento e Saída
print("Quociente da divisão inteira:", x//y)
print("Resto da divisão inteira:", x%y)
print("Quociente da divisão real:",x/y)
print("Produto de X vezes Y":", x*y)
print ("Y elevado à terceira potencia:", y**3)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:28:13)
-- CODE: 
#Entrada de Dados
x=int(input("Digite o valor de X (dividendo):10"))
y=int(input("Digite o valor de Y (divisor):3"))
#Processamento e Saída
print("Quociente da divisão inteira,x//y")
print("Resto da divisão inteira, x%y")
print("Quociente da divisão real, x//y")
print("Produto de X vezes Y, x*y")
print ("Y elevado à terceira potencia, y **3")


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia, y **3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:20:54)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo): "))
y = int(input("Digite o valor de Y (divisor): "))
#Processamento e Saída
print("Quociente da divisão inteira", x//y)
print("Resto da divisão inteira", x % y)
print("Quociente da divisão real", x//y)
print("Produto de X vezes Y", x * y)
print ("Y elevado à terceira potencia", y ** 3)


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:28:30)
-- CODE: 
#Entrada de Dados
x=int(input("Digite o valor de X (dividendo):"))
y=int(input("Digite o valor de Y (divisor):"))
#Processamento e Saída
print("Quociente da divisão inteira,x//y")
print("Resto da divisão inteira, x%y")
print("Quociente da divisão real, x//y")
print("Produto de X vezes Y, x*y")
print ("Y elevado à terceira potencia, y **3")


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia, y **3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:21:52)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):20 "))
y = int(input("Digite o valor de Y (divisor):6 "))

#Processamento e Saída
print("Quociente da divisão inteira",x//y)
print("Resto da divisão inteira",x%y)
print("Quociente da divisão real",x//y)
print("Produto de X vezes Y", x*y)
print ("Y elevado à terceira potencia", y**3)


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:41:50)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):"))
y = int(input("Digite o valor de Y (divisor):"))

#Processamento e Saída
print("Quociente da divisão inteira:", x // y)
print("Resto da divisão inteira:", x % y)
print("Quociente da divisão real:", x/y)
print("Produto de X vezes Y:", x*y)
print("Y elevado à terceira potência:", y**3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potência: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:21:42)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):20 "))
y = int(input("Digite o valor de Y (divisor):6 "))
#Processamento e Saída
print("Quociente da divisão inteira",x//y)
print("Resto da divisão inteira",x%y)
print("Quociente da divisão real",x//y)
print("Produto de X vezes Y", x*y)
print ("Y elevado à terceira potencia", y**3)


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:40:31)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):"))
y = int(input("Digite o valor de Y (divisor):"))

#Processamento e Saída
print("Quociente da divisão inteira:", x//y)
print("Resto da divisão inteira:", x % y)
print("Quociente da divisão real:", x/y)
print("Produto de X vezes Y:", x*y)
print("Y elevado à terceira potência:", y**3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potência: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:43:24)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):"))
y = int(input("Digite o valor de Y (divisor):"))

#Processamento e Saída
print("Quociente da divisão inteira:", x // y) #divisão inteira
print("Resto da divisão inteira:", x % y) #resto
print("Quociente da divisão real:", x / y) #divisão real 
print("Produto de X vezes Y:", x * y) #multiplicação
print("Y elevado à terceira potência:", y**3) #potência
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potência: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:52:14)
-- CODE: 
#lê dois inteiros sem mensagens
x = int(input())
y = int(input())
#imprime exatamente na ordem pedida, um por linha
print(x // y) #quociente da divisão inteira
print(x % y) #resto da divisão inteira
print(x / y) #quociente da divisão real
print(x * y) #produto
print(y ** 3) #y ao cubo
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:45:01)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):20"))
y = int(input("Digite o valor de Y (divisor):6"))

#Processamento e Saída
print("Quociente da divisão inteira:", x // y) #divisão inteira
print("Resto da divisão inteira:", x % y) #resto
print("Quociente da divisão real:", x / y) #divisão real 
print("Produto de X vezes Y:", x * y) #multiplicação
print("Y elevado à terceira potência:", y**3) #potência
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potência: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:21:16)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):20 "))
y = int(input("Digite o valor de Y (divisor):6 "))
#Processamento e Saída
print("Quociente da divisão inteira", x//y)
print("Resto da divisão inteira", x % y)
print("Quociente da divisão real", x//y)
print("Produto de X vezes Y", x * y)
print ("Y elevado à terceira potencia", y ** 3)


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:28:30)
-- CODE: 
#Entrada de Dados
x=int(input("Digite o valor de X (dividendo):"))
y=int(input("Digite o valor de Y (divisor):"))
#Processamento e Saída
print("Quociente da divisão inteira,x//y")
print("Resto da divisão inteira, x%y")
print("Quociente da divisão real, x//y")
print("Produto de X vezes Y, x*y")
print ("Y elevado à terceira potencia, y **3")


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia, y **3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:43:23)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):"))
y = int(input("Digite o valor de Y (divisor):"))

#Processamento e Saída
print("Quociente da divisão inteira:", x // y) #divisão inteira
print("Resto da divisão inteira:", x % y) #resto
print("Quociente da divisão real:", x / y) #divisão real 
print("Produto de X vezes Y:", x * y) #multiplicação
print("Y elevado à terceira potência:", y**3) #potência
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potência: 125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potência: 8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potência: 8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:27:06)
-- CODE: 
#Entrada de Dados
x = int(input("Digite o valor de X (dividendo):20 "))
y = int(input("Digite o valor de Y (divisor):6 "))

#Processamento e Saída
print("Quociente da divisão inteira:", x//y)
print("Resto da divisão inteira:", x%y)
print("Quociente da divisão real:",x/y)
print("Produto de X vezes Y":", x*y)
print ("Y elevado à terceira potencia:", y**3)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
File "XXXX", line 9
    print("Produto de X vezes Y":", x*y)
                                 ^
SyntaxError: unterminated string literal (detected at line 9)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:37:17)
-- CODE: 
#Entrada de Dados
x=int(input("Digite o valor de X (dividendo):"))
y=int(input("Digite o valor de Y (divisor):"))
#Processamento e Saída
print("Quociente da divisão inteira,x//y")
print("Resto da divisão inteira, x%y")
print("Quociente da divisão real, x//y")
print("Produto de X vezes Y, x*y")
print ("Y elevado à terceira potencia, y **3")


-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
Y elevado à terceira potencia, y **3
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
Y elevado à terceira potencia, y **3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
